[gd_scene load_steps=44 format=3 uid="uid://be4gkw7f52rht"]

[ext_resource type="PackedScene" uid="uid://d1ddd5slevhx3" path="res://scenes/scene_base.tscn" id="1_58o6h"]
[ext_resource type="Script" uid="uid://dcc7rp13n77la" path="res://scripts/level.gd" id="2_8n3nq"]
[ext_resource type="PackedScene" uid="uid://dchiyapfkkey5" path="res://scenes/circle_button.tscn" id="2_8rhjg"]
[ext_resource type="PackedScene" uid="uid://b2mmg773ujq1n" path="res://scenes/square_button.tscn" id="3_krm4r"]
[ext_resource type="Material" uid="uid://bvi7ye7tsm3eh" path="res://materials/black_diamond.tres" id="3_ynct0"]
[ext_resource type="Script" uid="uid://bmvtsahif08j" path="res://scripts/robot.gd" id="4_8n3nq"]
[ext_resource type="Material" uid="uid://dm3nx4lbqv2wd" path="res://materials/bluey.tres" id="5_8rhjg"]
[ext_resource type="Script" uid="uid://d0ca1qbqufaet" path="res://scripts/void.gd" id="5_40ga3"]
[ext_resource type="Texture2D" uid="uid://ckiadnt4gl24a" path="res://textures/arrow_up.png" id="5_l4xu8"]
[ext_resource type="Texture2D" uid="uid://b5w1xcdgg6mgn" path="res://textures/arrow_down.png" id="6_3iy5o"]
[ext_resource type="Material" uid="uid://nqcsi4sw0568" path="res://materials/grey_tile.tres" id="6_dq8h5"]
[ext_resource type="Material" uid="uid://8evmslx18foy" path="res://materials/rose.tres" id="6_krm4r"]
[ext_resource type="Material" uid="uid://c1a7dkmwp0ion" path="res://materials/white_tile.tres" id="6_w06h8"]
[ext_resource type="Texture2D" uid="uid://bp3fbxg852cow" path="res://textures/arrow_left.png" id="7_p3ew5"]
[ext_resource type="Texture2D" uid="uid://gd48x4m37ein" path="res://textures/arrow_right.png" id="8_x2afm"]
[ext_resource type="Texture2D" uid="uid://bjriuqc7suseu" path="res://textures/hand.png" id="9_3iy5o"]
[ext_resource type="PackedScene" uid="uid://bth2p7i70j475" path="res://scenes/level_button.tscn" id="11_bbft6"]
[ext_resource type="PackedScene" uid="uid://boes6r7kdhbq" path="res://scenes/bluey_body.tscn" id="16_4vntt"]
[ext_resource type="PackedScene" uid="uid://bonl8a0avpck2" path="res://scenes/rose_body.tscn" id="17_ioey5"]
[ext_resource type="AudioStream" uid="uid://bougcfulvrnus" path="res://audio/exit_enter.ogg" id="17_p3ew5"]
[ext_resource type="AudioStream" uid="uid://idqmowxf27x0" path="res://audio/exit_leave.ogg" id="18_x2afm"]
[ext_resource type="AudioStream" uid="uid://dpqnkorhjmgdl" path="res://audio/success.ogg" id="19_1vve2"]

[sub_resource type="PlaneMesh" id="PlaneMesh_014kd"]
size = Vector2(5, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_014kd"]
size = Vector3(5, 1, 5)

[sub_resource type="PlaneMesh" id="PlaneMesh_ynct0"]
size = Vector2(5, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_ynct0"]
size = Vector3(5, 0.1, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1vve2"]
albedo_color = Color(0.20784314, 0.23921569, 0.26666668, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_w06h8"]
material = SubResource("StandardMaterial3D_1vve2")
size = Vector2(5, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bbft6"]
albedo_color = Color(0.20784314, 0.23921569, 0.26666668, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_dq8h5"]
material = SubResource("StandardMaterial3D_bbft6")
size = Vector2(5, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_rus8k"]
size = Vector2(1.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_5xbjy"]
size = Vector3(1.5, 0.1, 0.4)

[sub_resource type="PlaneMesh" id="PlaneMesh_imdmy"]
material = ExtResource("6_w06h8")
size = Vector2(20, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_w06h8"]
size = Vector3(20, 1, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_g7p6o"]
size = Vector3(30, 3, 30)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5xbjy"]

[sub_resource type="SphereShape3D" id="SphereShape3D_pa8r4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4nkto"]

[sub_resource type="SphereShape3D" id="SphereShape3D_15mv3"]

[sub_resource type="SphereMesh" id="SphereMesh_ct2u3"]
material = ExtResource("5_8rhjg")
radius = 1.0
height = 0.001

[sub_resource type="CylinderShape3D" id="CylinderShape3D_plsol"]
height = 0.1
radius = 0.75

[sub_resource type="PlaneMesh" id="PlaneMesh_8ag0e"]
material = ExtResource("6_krm4r")

[sub_resource type="BoxShape3D" id="BoxShape3D_kj5lu"]
size = Vector3(1.5, 0.1, 1.5)

[node name="LevelBase" instance=ExtResource("1_58o6h")]
script = ExtResource("2_8n3nq")
_next_level = ""

[node name="XROrigin3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 3)

[node name="Floor" type="StaticBody3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 3)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor" index="0"]
material_override = ExtResource("3_ynct0")
mesh = SubResource("PlaneMesh_014kd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_014kd")

[node name="Ceiling" type="StaticBody3D" parent="Floor" index="2"]
transform = Transform3D(1, 0, 0, 0, -1, 8.742278e-08, 0, -8.742278e-08, -1, 0, 5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor/Ceiling" index="0"]
mesh = SubResource("PlaneMesh_ynct0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/Ceiling" index="1"]
shape = SubResource("BoxShape3D_ynct0")

[node name="BackWall" type="StaticBody3D" parent="Floor" index="3"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 2.5, 2.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor/BackWall" index="0"]
mesh = SubResource("PlaneMesh_ynct0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/BackWall" index="1"]
shape = SubResource("BoxShape3D_ynct0")

[node name="FrontWall" type="StaticBody3D" parent="Floor" index="4"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 2.5, -2.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor/FrontWall" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.9604645e-08, -1.5)
mesh = SubResource("PlaneMesh_w06h8")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Floor/FrontWall" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.940697e-08, 2)
mesh = SubResource("PlaneMesh_dq8h5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/FrontWall" index="2"]
shape = SubResource("BoxShape3D_ynct0")

[node name="LeftWall" type="StaticBody3D" parent="Floor" index="5"]
transform = Transform3D(-4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0, 1, -2.5, 2.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor/LeftWall" index="0"]
mesh = SubResource("PlaneMesh_ynct0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/LeftWall" index="1"]
shape = SubResource("BoxShape3D_ynct0")

[node name="RightWall" type="StaticBody3D" parent="Floor" index="6"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 2.5, 2.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor/RightWall" index="0"]
mesh = SubResource("PlaneMesh_ynct0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/RightWall" index="1"]
shape = SubResource("BoxShape3D_ynct0")

[node name="Console" type="StaticBody3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 0.90630776, -0.42261827, 0, 0.42261827, 0.90630776, 0, 8, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Console" index="0"]
mesh = SubResource("PlaneMesh_rus8k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Console" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
shape = SubResource("BoxShape3D_5xbjy")

[node name="BlueyControls" type="Node3D" parent="Console" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0, 0)

[node name="ForwardButton" parent="Console/BlueyControls" index="0" instance=ExtResource("2_8rhjg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.9604645e-08, -0.14999998)
_image = ExtResource("5_l4xu8")

[node name="BackButton" parent="Console/BlueyControls" index="1" instance=ExtResource("2_8rhjg")]
transform = Transform3D(1, 0, 0, 0, 1.0000001, 0, 0, 0, 1.0000001, 0, 0, 0.14999998)
_image = ExtResource("6_3iy5o")

[node name="LeftButton" parent="Console/BlueyControls" index="2" instance=ExtResource("2_8rhjg")]
transform = Transform3D(1, 0, 0, 0, 1.0000001, 0, 0, 0, 1.0000001, -0.15, 0, 0)
_image = ExtResource("7_p3ew5")

[node name="RightButton" parent="Console/BlueyControls" index="3" instance=ExtResource("2_8rhjg")]
transform = Transform3D(1, 0, 0, 0, 1.0000001, 0, 0, 0, 1.0000001, 0.15, 0, 0)
_image = ExtResource("8_x2afm")

[node name="GrabButton" parent="Console/BlueyControls" index="4" instance=ExtResource("2_8rhjg")]
_image = ExtResource("9_3iy5o")
_scale = 0.01

[node name="RoseControls" type="Node3D" parent="Console" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, 0)

[node name="ForwardButton" parent="Console/RoseControls" index="0" instance=ExtResource("3_krm4r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.15)
_image = ExtResource("5_l4xu8")

[node name="BackButton" parent="Console/RoseControls" index="1" instance=ExtResource("3_krm4r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.15)
_image = ExtResource("6_3iy5o")

[node name="LeftButton" parent="Console/RoseControls" index="2" instance=ExtResource("3_krm4r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, 0, 0)
_image = ExtResource("7_p3ew5")

[node name="RightButton" parent="Console/RoseControls" index="3" instance=ExtResource("3_krm4r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, 0, 0)
_image = ExtResource("8_x2afm")

[node name="GrabButton" parent="Console/RoseControls" index="4" instance=ExtResource("3_krm4r")]
_image = ExtResource("9_3iy5o")
_scale = 0.01

[node name="LevelLabel" type="Label3D" parent="Console" index="4"]
transform = Transform3D(1, 0, 0, 0, 1.0000002, 0, 0, 0, 1.0000002, 0, 1, -0.5)
text = "Level 1"

[node name="SelectButton" parent="Console" index="5" instance=ExtResource("11_bbft6")]
transform = Transform3D(1, 0, 0, 0, 1.0000001, 0, 0, 0, 1.0000001, -0.7, 0, -0.2)
_level = "uid://cq6w1n3hhcche"
_index = 0

[node name="BackWall" type="StaticBody3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 10, -30)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BackWall" index="0"]
material_override = ExtResource("6_dq8h5")
mesh = SubResource("PlaneMesh_imdmy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BackWall" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_w06h8")

[node name="LeftWall" type="StaticBody3D" parent="." index="6"]
transform = Transform3D(-4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0, 1, -10, 10, -20)

[node name="MeshInstance3D" type="MeshInstance3D" parent="LeftWall" index="0"]
material_override = ExtResource("6_dq8h5")
mesh = SubResource("PlaneMesh_imdmy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftWall" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_w06h8")

[node name="RightWall" type="StaticBody3D" parent="." index="7"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 10, 10, -20)

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightWall" index="0"]
material_override = ExtResource("6_dq8h5")
mesh = SubResource("PlaneMesh_imdmy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightWall" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_w06h8")

[node name="Ceiling" type="StaticBody3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, -1, 8.742278e-08, 0, -8.742278e-08, -1, 0, 20, -20)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ceiling" index="0"]
material_override = ExtResource("6_dq8h5")
mesh = SubResource("PlaneMesh_imdmy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ceiling" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_w06h8")

[node name="Void" type="Area3D" parent="." index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7, -22)
collision_layer = 0
collision_mask = 224
monitorable = false
script = ExtResource("5_40ga3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Void" index="0"]
shape = SubResource("BoxShape3D_g7p6o")

[node name="RobotBluey" type="CharacterBody3D" parent="." index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)
collision_layer = 33
script = ExtResource("4_8n3nq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RobotBluey" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_5xbjy")

[node name="GrabArea" type="Area3D" parent="RobotBluey" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="RobotBluey/GrabArea" index="0"]
shape = SubResource("SphereShape3D_pa8r4")

[node name="GrabTransform" type="RemoteTransform3D" parent="RobotBluey/GrabArea" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="BlueyMesh" parent="RobotBluey" index="2" instance=ExtResource("16_4vntt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21, 0)

[node name="RobotRose" type="CharacterBody3D" parent="." index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -20)
collision_layer = 65
script = ExtResource("4_8n3nq")
keyboard_control = true
forwards = "forwards"
backwards = "backwards"
left = "left"
right = "right"
grab = "grab"

[node name="CollisionShape3D" type="CollisionShape3D" parent="RobotRose" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_4nkto")

[node name="GrabArea" type="Area3D" parent="RobotRose" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="RobotRose/GrabArea" index="0"]
shape = SubResource("SphereShape3D_15mv3")

[node name="GrabTransform" type="RemoteTransform3D" parent="RobotRose/GrabArea" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="RoseMesh" parent="RobotRose" index="2" instance=ExtResource("17_ioey5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01, 0)

[node name="ExitBluey" type="Area3D" parent="." index="12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -24)
collision_layer = 0
collision_mask = 32
monitorable = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="ExitBluey" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
mesh = SubResource("SphereMesh_ct2u3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExitBluey" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
shape = SubResource("CylinderShape3D_plsol")

[node name="EnterAudioPlayer" type="AudioStreamPlayer3D" parent="ExitBluey" index="2"]
stream = ExtResource("17_p3ew5")

[node name="LeaveAudioPlayer" type="AudioStreamPlayer3D" parent="ExitBluey" index="3"]
stream = ExtResource("18_x2afm")

[node name="ExitRose" type="Area3D" parent="." index="13"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -24)
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="ExitRose" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
mesh = SubResource("PlaneMesh_8ag0e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExitRose" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
shape = SubResource("BoxShape3D_kj5lu")

[node name="EnterAudioPlayer" type="AudioStreamPlayer3D" parent="ExitRose" index="2"]
stream = ExtResource("17_p3ew5")

[node name="LeaveAudioPlayer" type="AudioStreamPlayer3D" parent="ExitRose" index="3"]
stream = ExtResource("18_x2afm")

[node name="FinishTimer" type="Timer" parent="." index="14"]
one_shot = true

[node name="SuccessPlayer" type="AudioStreamPlayer" parent="." index="15"]
stream = ExtResource("19_1vve2")

[node name="SuccessTimer" type="Timer" parent="." index="16"]
wait_time = 0.4
one_shot = true

[connection signal="pressed" from="Console/BlueyControls/ForwardButton" to="RobotBluey" method="_on_forward_button_pressed"]
[connection signal="released" from="Console/BlueyControls/ForwardButton" to="RobotBluey" method="_on_forward_button_released"]
[connection signal="pressed" from="Console/BlueyControls/BackButton" to="RobotBluey" method="_on_forward_button_released"]
[connection signal="released" from="Console/BlueyControls/BackButton" to="RobotBluey" method="_on_forward_button_pressed"]
[connection signal="pressed" from="Console/BlueyControls/LeftButton" to="RobotBluey" method="_on_left_button_pressed"]
[connection signal="released" from="Console/BlueyControls/LeftButton" to="RobotBluey" method="_on_right_button_pressed"]
[connection signal="pressed" from="Console/BlueyControls/RightButton" to="RobotBluey" method="_on_right_button_pressed"]
[connection signal="released" from="Console/BlueyControls/RightButton" to="RobotBluey" method="_on_left_button_pressed"]
[connection signal="pressed" from="Console/BlueyControls/GrabButton" to="RobotBluey" method="_on_grab_button_pressed"]
[connection signal="pressed" from="Console/RoseControls/ForwardButton" to="RobotRose" method="_on_forward_button_pressed"]
[connection signal="released" from="Console/RoseControls/ForwardButton" to="RobotRose" method="_on_forward_button_released"]
[connection signal="pressed" from="Console/RoseControls/BackButton" to="RobotRose" method="_on_forward_button_released"]
[connection signal="released" from="Console/RoseControls/BackButton" to="RobotRose" method="_on_forward_button_pressed"]
[connection signal="pressed" from="Console/RoseControls/LeftButton" to="RobotRose" method="_on_left_button_pressed"]
[connection signal="released" from="Console/RoseControls/LeftButton" to="RobotRose" method="_on_right_button_pressed"]
[connection signal="pressed" from="Console/RoseControls/RightButton" to="RobotRose" method="_on_right_button_pressed"]
[connection signal="released" from="Console/RoseControls/RightButton" to="RobotRose" method="_on_left_button_pressed"]
[connection signal="pressed" from="Console/RoseControls/GrabButton" to="RobotRose" method="_on_grab_button_pressed"]
[connection signal="ungrab_requested" from="RobotBluey" to="RobotRose" method="_on_ungrab_requested"]
[connection signal="body_entered" from="RobotBluey/GrabArea" to="RobotBluey" method="_on_grab_area_body_entered"]
[connection signal="body_exited" from="RobotBluey/GrabArea" to="RobotBluey" method="_on_grab_area_body_exited"]
[connection signal="ungrab_requested" from="RobotRose" to="RobotBluey" method="_on_ungrab_requested"]
[connection signal="body_entered" from="RobotRose/GrabArea" to="RobotRose" method="_on_grab_area_body_entered"]
[connection signal="body_exited" from="RobotRose/GrabArea" to="RobotRose" method="_on_grab_area_body_exited"]
[connection signal="body_entered" from="ExitBluey" to="." method="robot_finished"]
[connection signal="body_entered" from="ExitBluey" to="ExitBluey/EnterAudioPlayer" method="play" unbinds=1]
[connection signal="body_exited" from="ExitBluey" to="." method="robot_unfinished"]
[connection signal="body_exited" from="ExitBluey" to="ExitBluey/LeaveAudioPlayer" method="play" unbinds=1]
[connection signal="body_entered" from="ExitRose" to="." method="robot_finished"]
[connection signal="body_entered" from="ExitRose" to="ExitRose/EnterAudioPlayer" method="play" unbinds=1]
[connection signal="body_exited" from="ExitRose" to="." method="robot_unfinished"]
[connection signal="body_exited" from="ExitRose" to="ExitRose/LeaveAudioPlayer" method="play" unbinds=1]
[connection signal="timeout" from="FinishTimer" to="." method="_on_finish_timer_timeout"]
[connection signal="timeout" from="SuccessTimer" to="." method="_on_success_timer_timeout"]
